--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
         "@ant-design/colors": "^6.0.0",
         "@ant-design/icons": "^4.7.0",
         "@emotion/cache": "^11.10.3",
-        "@emotion/react": "^11.10.4",
-        "@emotion/styled": "^11.10.4",
+        "@emotion/react": "^11.10.8",
+        "@emotion/styled": "^11.10.8",
+        "@mui/icons-material": "^5.11.0",
         "@mui/lab": "^5.0.0-alpha.100",
-        "@mui/material": "^5.10.6",
+        "@mui/material": "^5.11.0",
+        "@mui/styled-engine-sc": "^5.11.0",
+        "@mui/styles": "^5.10.6",
+        "@mui/x-date-pickers": "^5.0.10",
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
         "apexcharts": "^3.35.5",
+        "axios": "^1.4.0",
         "formik": "^2.2.9",
         "framer-motion": "^7.3.6",
         "history": "^5.3.0",
